solved horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   background: #f1f3f6;
   line-height: 1.4;
   font-size: 14px;
+  overflow-x: hidden;
 }
 
 .card{
